--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       no.style.left = x + "px";
       no.style.top = y + "px";
       no.style.transform = "translate(0,0)";
-      hint.textContent = "if you choose No I’m coming for you 😈";
+      hint.textContent = "if you choose No I’ll f*ck you up 😈";
     }
 
     // Party effects
@@ -470,3 +470,4 @@
   </script>
 </body>
 </html>
+
